[package]
name = "ctrl-oem3-native"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "=4.5.3", features = ["derive"] }
windows = { version = "0.56.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
single-instance = "0.3.3"
futures = "0.3.30"
arc-swap = "1.7.1"
pin-project = "1.1.5"
regex = "1.10.4"
once_cell = "1.19.0"
base64 = "0.22.0"
tokio-util = "0.7.10"
thiserror = "1.0.59"

[build-dependencies]
regex = "1.10.4"
anyhow = "1.0.82"
serde = "1.0.199"
serde_json = "1.0.116"
